--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     </head>
     <body>
         <header>
-
+            <nav>
+                <ul>
+                    <li><a href="">Wir</a></li>
+                    <li><a href="">Unsere Schule</a></li>
+                    <li><a href="">Schulprofil</a></li>
+                    <li><a href="">Stufen</a></li>
+                    <li><a href="">Fächer</a></li>
+                    <li><a href="">News & Events</a></li>
+                    <li><a href="">Corona/Fernlernen</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
 
