--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
         <title>Marion Dönhoff Gymnasium</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <header>
             <nav>
+                <div class="logo">
+                    <p>navbar</p>
+                </div>
                 <ul>
                     <li><a href="">Wir</a></li>
                     <li><a href="">Unsere Schule</a></li>
