--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <body>
         <header>
             <nav>
-                <div class="logo">
-                    <p>navbar</p>
+                <div class="image-container">
+                    <img src="MDG-Logo.png">
                 </div>
                 <ul>
                     <li><a href="">Wir</a></li>
