--- a/index.html
+++ b/index.html
@@ -28,14 +28,26 @@
         <div class="post_header">
             <img class="background_image" src="125_jahre_background.jpg">
             <div class="post_header_news">
-                <h1>News Title</h1>
+                <h1>Neuigkeiten</h1>
+                <img class="mdg-oscars-logo" src="MDG-Oscars.png">
                 <p>News Text Lorem Ipsum Deine Mom Kennt Obama's Nachnamen er Lautet: I forgor</p>
                 <ul><li>News list item</li></ul>
                 <a href="#">Clickable news link item</a>
             </div>
         </div>
         <main id="main_resizable" name="TOP">
-            <h1>Startseite</h1>
+            <div class="infos-container">
+                <div class="infos-headline">
+                    <h1>Partizipation</h1>
+                    <h1>Fächerverbindend Lernen</h1>
+                    <h1>Fordern und Fördern</h1>
+                </div>
+                <div class="infos-text">
+                    <p>Schülerinnen und Schüler lernen am Marion Dönhoff Gymnasium in hohem Maße selbstgesteuert und eigenverantwortlich. Sie erhalten in diesem Rahmen auch die Möglichkeit, sich an der Unterrichts- und Schulentwicklung zu beteiligen.</p>
+                    <p>Die Welt ist nicht in Fächer unterteilt, darum ist fächerverbindendes Lernen am Marion Dönhöff Gymnasium schon ab der 5. Jahrgangsstufe fester Bestandteil jedes Stundenplans.</p>
+                    <p>Das MDG fordert begabte Schüler und fördert diejenigen, die Lücken schließen müssen. Unser Förderkonzept mit speziellen Kursangeboten und jahrgangsübergreifendem Unterrichtsangebot entwickeln wir darüber hinaus stetig weiter.</p>
+                </div>
+            </div>
             <h2>Warum das Marion Dönhoff Gymnasium?</h2>
             <ul><li>Hohe Partizipartion von Schülern, Eltern und Lehrern</li></ul>
             <h2>MDG Schulbrief</h2>
@@ -43,17 +55,18 @@
         <div class="footer_top_bar">
             <br>
         </div>
-        <footer><center>
+        <footer>
             <br>
             <div class="back_to_top">
                 <h2><a href="#TOP">Nach Oben</a></h2>
             </div>
             <hr>
-            <h1>Ausgezeichnet als</h1>
-            <img src="media/sor_smc.jpg" width="300px" style="padding: 25px;">
-            </center>
+            <div class="shool-award">
+                <h1>Ausgezeichnet als</h1>
+                <img src="media/sor_smc.jpg" width="300px" style="padding: 25px;">
+            </div>
             <div class="footer_info_items">
-                <p> © 2020 Marion Dönhoff Gymnasium Hamburg</p>                
+                <p> © 2020 Marion Dönhoff Gymnasium Hamburg</p>               
             </div>
         </footer>
     </body>
