--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de"> 
     <head>
         <title>Marion Dönhoff Gymnasium</title>
@@ -8,41 +8,40 @@
         <script src="main.js"></script>
     </head>
     <body onload="mobile_resize()">
-
         <header>
             <nav class="navbar">
                 <div class="image_container">
-                    <a href="https://www.marion-doenhoff.gymnasium.de"><img src="MDG-Logo.png"></a>
-                </div>
+                    <a href="index.html"><img src="MDG-Logo.png"></a>
                 <ul>
-                    <li><a href="">Wir</a></li>
-                    <li><a href="">Unsere Schule</a></li>
-                    <li><a href="">Schulprofil</a></li>
-                    <li><a href="">Stufen</a></li>
-                    <li><a href="">Fächer</a></li>
-                    <li><a href="">News & Events</a></li>
-                    <li><a href="">Corona/Fernlernen</a></li>
+                    <li><a href="about.html">Wir</a></li>
+                    <li><a href="our_school.html">Unsere Schule</a></li>
+                    <li><a href="school_profile.html">Schulprofil</a></li>
+                    <li><a href="grades.html">Stufen</a></li>
+                    <li><a href="subjects.html">Fächer</a></li>
+                    <li><a href="news_and_events.html">News & Events</a></li>
+                    <li><a href="propaganda.html">Corona/Fernlernen</a></li>
                 </ul>
+                </div>
             </nav>
         </header>
         <div class="post_header">
             <img class="background_image" src="125_jahre_background.jpg">
             <div class="post_header_news">
                 <h1>Neuigkeiten</h1>
-                <img class="mdg-oscars-logo" src="MDG-Oscars.png">
+                <img class="mdg_oscars_logo" src="MDG-Oscars.png">
                 <p>News Text Lorem Ipsum Deine Mom Kennt Obama's Nachnamen er Lautet: I forgor</p>
                 <ul><li>News list item</li></ul>
                 <a href="#">Clickable news link item</a>
             </div>
         </div>
         <main id="main_resizable" name="TOP">
-            <div class="infos-container">
-                <div class="infos-headline">
+            <div class="infos_container">
+                <div class="infos_headline">
                     <h1>Partizipation</h1>
                     <h1>Fächerverbindend Lernen</h1>
                     <h1>Fordern und Fördern</h1>
                 </div>
-                <div class="infos-text">
+                <div class="infos_text">
                     <p>Schülerinnen und Schüler lernen am Marion Dönhoff Gymnasium in hohem Maße selbstgesteuert und eigenverantwortlich. Sie erhalten in diesem Rahmen auch die Möglichkeit, sich an der Unterrichts- und Schulentwicklung zu beteiligen.</p>
                     <p>Die Welt ist nicht in Fächer unterteilt, darum ist fächerverbindendes Lernen am Marion Dönhöff Gymnasium schon ab der 5. Jahrgangsstufe fester Bestandteil jedes Stundenplans.</p>
                     <p>Das MDG fordert begabte Schüler und fördert diejenigen, die Lücken schließen müssen. Unser Förderkonzept mit speziellen Kursangeboten und jahrgangsübergreifendem Unterrichtsangebot entwickeln wir darüber hinaus stetig weiter.</p>
@@ -61,12 +60,16 @@
                 <h2><a href="#TOP">Nach Oben</a></h2>
             </div>
             <hr>
-            <div class="shool-award">
+            <div class="school_award">
                 <h1>Ausgezeichnet als</h1>
                 <img src="media/sor_smc.jpg" width="300px" style="padding: 25px;">
             </div>
             <div class="footer_info_items">
-                <p> © 2020 Marion Dönhoff Gymnasium Hamburg</p>               
+                <br>
+                <hr>
+                <h1></h1>
+                <p> © 2020 Marion Dönhoff Gymnasium Hamburg</p>
+                <h1></h1>      
             </div>
         </footer>
     </body>
