--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
         </div>
         <main id="main_resizable" name="TOP">
             <div class="infos_container">
-                <div class="infos_headline">
+                <div class="info_container1">
                     <h1>Partizipation</h1>
-                    <h1>Fächerverbindend Lernen</h1>
-                    <h1>Fordern und Fördern</h1>
+                    <a>Schülerinnen und Schüler lernen am Marion Dönhoff Gymnasium in hohem Maße selbstgesteuert und eigenverantwortlich. Sie erhalten in diesem Rahmen auch die Möglichkeit, sich an der Unterrichts- und Schulentwicklung zu beteiligen.</a>
                 </div>
-                <div class="infos_text">
-                    <p>Schülerinnen und Schüler lernen am Marion Dönhoff Gymnasium in hohem Maße selbstgesteuert und eigenverantwortlich. Sie erhalten in diesem Rahmen auch die Möglichkeit, sich an der Unterrichts- und Schulentwicklung zu beteiligen.</p>
-                    <p>Die Welt ist nicht in Fächer unterteilt, darum ist fächerverbindendes Lernen am Marion Dönhöff Gymnasium schon ab der 5. Jahrgangsstufe fester Bestandteil jedes Stundenplans.</p>
-                    <p>Das MDG fordert begabte Schüler und fördert diejenigen, die Lücken schließen müssen. Unser Förderkonzept mit speziellen Kursangeboten und jahrgangsübergreifendem Unterrichtsangebot entwickeln wir darüber hinaus stetig weiter.</p>
+                <div class="info_container2">
+                    <h1>Fächerverbindend Lernen</h1>
+                    <a>Die Welt ist nicht in Fächer unterteilt, darum ist fächerverbindendes Lernen am Marion Dönhöff Gymnasium schon ab der 5. Jahrgangsstufe fester Bestandteil jedes Stundenplans.</a>
+                </div>
+                <div class="info_container3">
+                    <h1>Fordern und Fördern</h1>
+                    <a>Das MDG fordert begabte Schüler und fördert diejenigen, die Lücken schließen müssen. Unser Förderkonzept mit speziellen Kursangeboten und jahrgangsübergreifendem Unterrichtsangebot entwickeln wir darüber hinaus stetig weiter.</a>
                 </div>
             </div>
-            <h2>Warum das Marion Dönhoff Gymnasium?</h2>
-            <ul><li>Hohe Partizipartion von Schülern, Eltern und Lehrern</li></ul>
-            <h2>MDG Schulbrief</h2>
+            <br><br><br><h2>MDG Schulbrief</h2>
         </main>
         <div class="footer_top_bar">
             <br>
