Verkackter responibility versuch
nix funktioniert scheiß js

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="main.js"></script>
     </head>
-    <body onload="mobile_resize()">
+    <body onload="mobileResize()">
         <header>
-            <nav class="navbar">
+            <nav class="navbar" id="desktop_navbar">
                 <div class="image_container">
                     <a href="index.html"><img src="MDG-Logo.png"></a>
                 <ul>
@@ -23,6 +23,18 @@
                 </ul>
                 </div>
             </nav>
+            <nav class="navbar" id="mobile_navbar">
+                <ul>
+                    <li><a href="about.html">Wir</a></li>
+                    <li><a href="our_school.html">Unsere Schule</a></li>
+                    <li><a href="school_profile.html">Schulprofil</a></li>
+                    <li><a href="grades.html">Stufen</a></li>
+                    <li><a href="subjects.html">Fächer</a></li>
+                    <li><a href="news_and_events.html">News & Events</a></li>
+                    <li><a href="propaganda.html">Corona/Fernlernen</a></li>
+                </ul>
+            </nav>
+            
         </header>
         <div class="post_header">
             <img class="background_image" src="125_jahre_background.jpg">
